--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src='main.js'></script>
 </head>
 <body>
+    <p> This is a new <strong> paragraph </strong></p>
     Hello
 </body>
 </html>>
