--- a/blog.html
+++ b/blog.html
@@ -2,13 +2,10 @@
 layout: default
 title: Blog
 ---
-<h1>Latest Posts</h1>
 
-<ul>
-  {% for post in site.posts %}
-    <li>
-      <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
-      {{ post.excerpt }}
-    </li>
-  {% endfor %}
-</ul>
+{% for post in site.posts %}
+
+  <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
+  {{ post.subtitle }}
+
+{% endfor %}
